# VulkanRaytracingCycles

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
libAeolus/: CMakeLists.txt
libAeolus/src/: aeolus.hpp  extMain.cpp  interfaceVk.h  pch.h  working.h
libAeolus/src/aeolus/: BrunchVk.cpp  BrunchVk.h  CircusVk.h  ImmutableVk.h  PipelineVk.cpp  PipelineVk.h  RTVk.cpp  SwapChain.h  swapchain.cpp  vthreepy_const.h  vthreepy_types.h
libAeolus/src/aeolus/canvasVk/: Canvas.cpp  SnapShot.cpp  SnapShot.h  common.h
libAeolus/src/aeolus/groupVk/: common.h  group.cpp
libAeolus/src/aeolus/materialsVk/: Material2Vk.cpp  common.h  materials.cpp
libAeolus/src/ext/: nvFoundation.h  nvMeshlet.h
libAeolus/src/util/: global.cpp  log.cpp  log.hpp
libAeolusOptix/: CMakeLists.txt  RNA_blender_cpp.h
libAeolusOptix/CMake/: FindCUDA.cmake
libAeolusOptix/aeolus_device/device/: CMakeLists.txt  device.cpp  device.h  device_cpu.cpp  device_cuda.cpp  device_denoising.cpp  device_intern.h  device_memory.cpp  device_memory.h  device_optix.cpppp  device_split_kernel.cpp  device_task.cpp  device_task.h  device_utils.h
libAeolusOptix/aeolus_device/device/cuda/: device_cuda.h  device_cuda_impl.cpp
libAeolusOptix/blender/: CCL_api.h  CMakeLists.txt  blender_camera.cpp  blender_device.cpp  blender_geometry.cpp  blender_image.cpp  blender_light.cpp  blender_logging.cpp  blender_mesh.cpp  blender_object.cpp  blender_object_cull.cpp  blender_session2.h  blender_shader.cpp  blender_sync.cpp  blender_sync2.h  blender_texture.cpp  blender_texture.h  blender_util.h  blender_viewport.cpp
libAeolusOptix/cycles/: CMakeLists.txt
libAeolusOptix/cycles/bvh/: CMakeLists.txt  bvh_optix.cpp
libAeolusOptix/cycles/graph/: CMakeLists.txt
libAeolusOptix/cycles/kernel/: CMakeLists.txt  kernel_accumulate.h  kernel_adaptive_sampling.h  kernel_bake.h  kernel_compat_cpu.h  kernel_differential.h  kernel_emission.h  kernel_light.h  kernel_montecarlo.h  kernel_passes.h  kernel_path.h  kernel_path_subsurface.h  kernel_path_surface.h  kernel_shader.h  kernel_shadow.h  kernel_subsurface.h  kernel_textures_ccl.h
libAeolusOptix/cycles/kernel/bvh/: bvh.h  bvh_nodes.h  bvh_traversal.h
libAeolusOptix/cycles/kernel/closure/: alloc.h  bsdf.h  bsdf_microfacet.h  bsdf_microfacet_multi_impl.h  bsdf_oren_nayar.h
libAeolusOptix/cycles/kernel/geom/: geom_triangle.h  geom_triangle_intersect.h
libAeolusOptix/cycles/kernel/svm/: svm.h  svm_closure.h  svm_sky.h
libAeolusOptix/cycles/render/: CMakeLists.txt  attribute.cpp  colorspace.cpp  geometry.cpp  geometry.h  image.cpp  image.h  light.cpp  mesh.cpp  mesh_subdivision.cpp  nodes.cpp  session.cpp  session.h  svm.cpp
libAeolusOptix/cycles/subd/: CMakeLists.txt
libAeolusOptix/cycles/util/: CMakeLists.txt  util_debug.h  util_debug2.cpp  util_debug2.h  util_math.h  util_math_fast.h  util_path.cpp  util_xml.h
libAeolusOptix/opttest/: BlTextures.h  CMakeLists.txt  RedisUtils.h  background_test.h  bufferreference2_t.h  bvh_vulkan.h  circusTest.h  circusTest2.cpp  circusTest2.h  log_gamma.h
libAeolusOptix/scripts/: clear_console.py  clspv.py  gdal.py  vs_run_circus.py
libAeolusOptix/scripts/addon/circus/: __init__.py  engine.py  presets.py  properties.py  version_update.py
libAeolusOptix/scripts/data_py/: redis_data.py
libAeolusOptix/scripts/utils_py/: check_float.py  check_geom.py  check_math.py  check_node.py  check_out.py  check_sub.py  check_type.py  check_val.py  check_val2.py  gamma.c  lgamma.py  parse_enum.py  parse_variables.py  pol.c  spv_check.py
libAeolusOptix/scripts/utils_py/extensions/: ARB_shader_clock.txt  Debug_print.cpp  EXT_NONUNIFORM.txt  EXT_realtime_clock.txt  (+5 more)
libAeolusOptix/shaders/: compile.py
libAeolusOptix/shaders/fullscreen/: prg4.frag.glsl  prg4.vert.glsl  tonemapping.frag.glsl  tonemapping.h
libAeolusOptix/shaders/intern/: common.rep  common_math_lib.glsl  common_view_lib.glsl  kernel_compat_vulkan.h  kernel_compat_vulkan.h.glsl
libAeolusOptix/src/: RNA_blender.h
libblender/: CMakeLists.txt  cmake_.txt
libblender/build_files/cmake/: macros.cmake
libblender/intern/: CMakeLists.txt
libblender/intern/eigen/: CMakeLists.txt
libblender/intern/guardedalloc/: CMakeLists.txt
libblender/intern/numaapi/: CMakeLists.txt
libblender/intern/sky/: CMakeLists.txt
libblender/source/: CMakeLists.txt
libblender/source/blender/: CMakeLists.txt  _CMakeLists.txt
libblender/tests/: CMakeLists.txt
libktx/: CMakeLists.txt
libktx/_src/: libktx.cpp  test.h  test1.cpp
libktx/src/: libktx.cpp  libktx.h  log.cpp  log.hpp  pch.h
libthreepy/: CMakeLists.txt
libthreepy/src/: Vk.cpp  Vk.h  enum.hpp  pch_three.h  threepy.h  threepy_const.h  threepy_path.h  threepy_types.h  threepy_working.h  types.hpp
libthreepy/src/camera/: _Camera.cpp  _camera.hpp
libthreepy/src/core/: BufferAttribute3.cpp  Layer.cpp  Object3D.cpp  canvas.h  common.hpp  topics.cpp  topics.h
libthreepy/src/loader/: FileLoader.cpp  GLTFLoader.cpp  Loader.cpp  Loader.h  LoaderUtils.cpp  LoaderUtils.h  LoadingManager.cpp  LoadingManager.h  json.cpp  json.h
libthreepy/src/materials/: common.hpp  materials.cpp
libthreepy/src/math/: Color.cpp  Euler.cpp  Frustum.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Sphere.cpp  SphericalHarmonics3.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  common.hpp
libthreepy/src/scene/: group.h  overlay.cpp  scene.cpp  scene.h
libthreepy/src/util/: global.cpp  global.hpp  log0.cpp  log0.hpp  types.cpp  working.h
libvkmm/: CMakeLists.txt
libvkmm/src/: pch_mm.h  working_mm.h
libvkmm/src/aeolus/: AllocatorVk.cpp  AllocatorVk.h  AttachmentsVk.cpp  AttachmentsVk.h  CacheVk.cpp  CacheVk.h  CmdPoolVk.cpp  CmdPoolVk.h  Context1Vk.cpp  Context1Vk.h  ImagesVk.cpp  ImagesVk.h  MemoryVk.h  ObjectVk.cpp  ObjectVk.h  ScriptorVk.cpp  ScriptorVk.h  SignalVk.cpp  SignalVk.h  UniformsVk.cpp  UniformsVk.h  WindowVk.h  incomplete.cpp  incomplete.h  rtobjectVk.cpp  vthreepy_types.h
libvkmm/src/ext/: extensions_vk.cpp  extensions_vk.hpp  harness_defs.h
libvkmm/src/util/: global.cpp  global.hpp  log.cpp  log.hpp
(+1344 files in other folders)
